apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__tags__render_tag_collection_text_empty.snap
---
source: lorvex-cli/src/render/snapshots/tags.rs
expression: out
---
Lorvex Tags
DB: /tmp/lorvex.db
  ↳ No tags yet — assistants can attach tags via `task_update`, or add them on a task with `lorvex task update <id> --add-tag <name>`.
